--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .container {
             position: relative;
             z-index: 2;
-            background-image: url('images/weavers.png'); /* ✅ background image inside form */
+            background-image: url('weavers.png'); /* ✅ background image inside form */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -110,7 +110,7 @@
 <body>
     <div class="overlay"></div>
     <div class="container">
-        <img src="images/logo.png" alt="Federation Logo" class="logo">
+        <img src="logo.png" alt="Federation Logo" class="logo">
         <h2>All India Weavers Federation</h2>
         <form action="#" method="post" onsubmit="return showMessage()">
             <label for="name">Full Name</label>
