--- a/index.html
+++ b/index.html
@@ -1,34 +1,159 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Registration Form</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All India Weavers Federation - Registration Form</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            background-image: url('images/WhatsApp Image 2025-08-18 at 2.09.11 PM.jpeg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background-color: rgba(0,0,0,0.5);
+            z-index: 1;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            background-image: url('weavers.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            padding: 30px 40px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+            width: 100%;
+            max-width: 500px;
+            text-align: center;
+            color: #000;
+        }
+
+        .container::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(255, 255, 255, 0.85);
+            border-radius: 12px;
+            z-index: -1;
+        }
+
+        .logo {
+            max-width: 200px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #1e90ff;
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        label {
+            margin-bottom: 5px;
+            font-weight: bold;
+            text-align: left;
+        }
+
+        input, select, textarea {
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        button {
+            padding: 12px;
+            background-color: #1e90ff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: #0f78d1;
+        }
+    </style>
 </head>
 <body>
-    <h2>Register</h2>
-    <form id="myForm">
-        <label>Name:</label>
-        <input type="text" name="name" required><br><br>
-        <label>Email:</label>
-        <input type="email" name="email" required><br><br>
-        <label>Phone:</label>
-        <input type="text" name="phone" required><br><br>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="overlay"></div>
+    <div class="container">
+        <img src="logo.png" alt="Federation Logo" class="logo">
+        <h2>All India Weavers Federation</h2>
+        
+        <!-- ✅ Updated Form Action to Google Apps Script -->
+        <form action="https://script.google.com/macros/s/AKfycbxWTvGlkvnRvcJgPj1aYL4ITsAi8polzYuMI38ejiDMcgu0sniqH_nTMnE4OIRo01HIZg/exec" method="POST" onsubmit="return showMessage();">
+            
+            <label for="name">Full Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+
+            <label for="state">State</label>
+            <select id="state" name="state" required>
+                <option value="">Select your state</option>
+                <option value="Andhra Pradesh">Andhra Pradesh</option>
+                <option value="Telangana">Telangana</option>
+                <option value="Karnataka">Karnataka</option>
+                <option value="Kerala">Kerala</option>
+                <option value="Tamil Nadu">Tamil Nadu</option>
+                <option value="Maharashtra">Maharashtra</option>
+                <option value="Gujarat">Gujarat</option>
+                <option value="Uttar Pradesh">Uttar Pradesh</option>
+                <option value="West Bengal">West Bengal</option>
+            </select>
+
+            <label for="weaving-type">Type of Weaving / Craft</label>
+            <input type="text" id="weaving-type" name="weaving-type" placeholder="E.g., Handloom, Ikat, Banarasi">
+
+            <label for="message">Additional Information</label>
+            <textarea id="message" name="message" rows="4" placeholder="Enter any additional details"></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 
     <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbxWTvGlkvnRvcJgPj1aYL4ITsAi8polzYuMI38ejiDMcgu0sniqH_nTMnE4OIRo01HIZg/exec';
-        document.getElementById('myForm').addEventListener('submit', e => {
-            e.preventDefault();
-            const formData = new FormData(e.target);
-            const data = Object.fromEntries(formData.entries());
-
-            fetch(scriptURL, {
-                method: 'POST',
-                body: JSON.stringify(data)
-            })
-            .then(response => alert('Data saved successfully!'))
-            .catch(error => console.error('Error!', error.message));
-        });
+        function showMessage() {
+            alert("Form submitted successfully!");
+            return true; // ✅ Allow form to submit
+        }
     </script>
 </body>
 </html>
+
