--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-image: url('images/WhatsApp Image 2025-08-18 at 2.09.11 PM.jpeg');
+            background-image: url('WhatsApp Image 2025-08-18 at 2.09.11 PM.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
