--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2>All India Weavers Federation</h2>
         
         <!-- ✅ Updated Form Action to Google Apps Script -->
-        <form action="https://script.google.com/macros/s/AKfycbxWTvGlkvnRvcJgPj1aYL4ITsAi8polzYuMI38ejiDMcgu0sniqH_nTMnE4OIRo01HIZg/exec" method="POST" onsubmit="return showMessage();">
+        <form action="https://script.google.com/macros/s/AKfycbwKgQi_eyAssZYYxvl1qpp5nkPO-wd-z55QzJIewG6o8dP0QwB9_L5XD6cBtOF3kas_pQ/exec">
             
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your full name" required>
