--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <textarea id="message" name="message" rows="4" placeholder="Enter any additional details"></textarea>
 
             <button type="submit">Submit</button>
-        </form>
+        </action>
     </div>
 
     <script>
